[package]
name = "momento-ddb-interceptor"
version = "0.1.1"
authors = ["momento"]
edition = "2024"
description = "Momento extension for DynamoDB client"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/momentohq/momento-ddb-interceptor"
homepage = "https://gomomento.com/"

[dependencies]
aws-sdk-dynamodb                        = { version = "1.98" }
log                                     = { version = "0" }
